### Changed
- [API_PARSER] [BLACKBERRY_CYLANCE] Stop collector earlier and wait for next run when rate-limited by the API
### Fixed
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
- [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
- [API_PARSER] [PERCEPTION_POINT_X_RAY] Improve error message


## [2.26.1] - 2025-05-21
### Fixed
- [API_PARSER] [TRENDMICRO_VISIONONE] Last api call was not updated
- [API_PARSER] [CORTEX_XDR] Last api call was not updated


## [2.26.0] - 2025-05-16
### Added
- [API_PARSER] [HORNETSECURITY] New collector
- [GUI] Middle click to edit an object in a new tab
- [SCRIPT] [WIPE] New script to reset a bootstrapped node
### Fixed
- [PORTAL] [SELF_SERVICE] Disabled workflows listed
- [MONGODB] Allow clusters with more than 7 nodes
- [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations
- [GUI] [RSYSLOG] Bring more details on GUI when configuration builds fail
- [SERVICES] [FRONTEND] Improve deletion messages and conditions on GUI and API
- [API_PARSER] Ensure modifications in configuration are not overriden by running instances
- [API_PARSER] [NOZOMI_PROBE] Fix type error when the field total is null
- [API_PARSER] [ARMIS_CENTRIX] Fix condition to ask for a new token
- [FRONTEND] Hot-disable a collector manually
- [SERVICES] Prevent errors when deleted configuration files do not exist
- [CLUSTER_JOIN] Fix writing of certificates on new node's disk
- [REDIS] Use proper Sentinel client when updating service
### Changed
- [API_PARSER] [CROWDSTRIKE] Evolve collector to use API v2 instead of v1
- [API_PARSER] [ARMIS_CENTRIX] Collect at max 1h of range to avoid API taking too long to answer
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Add session_details in logs and split them
- [FILEBEAT] Separate building configurations and restarting service
- [GUI] Improve AJAX requests management
- [CLUSTER] Improve node import routine