@@ -16,6 +16,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
 - [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
 - [API_PARSER] [PERCEPTION_POINT_X_RAY] Improve error message
+- [API_PARSER] [GATEWATCHER_ALERTS] Update endpoint of the API
 
 
 ## [2.26.1] - 2025-05-21
